unb-gama/style.css
@import url(../base/style.css);
@import url(../../icons/awesome/style.scss);

@font-face {
  font-family: "Aller";
  src: url('fonts/Aller_Lt.ttf');
}
p.customfont {
  font-family: "My Custom Font", Verdana, Tahoma;
}

body {
  background: #FFF;
  color: #000;
}

/* BETA - INICIO */

#beta {
  width: 98px;
  height: 98px;
  position: absolute;
  top: -48px;
  left: -25px;
}

#beta span {
  display: none;
}

/* BETA - FINAL */

#wrap-1 {
  width: auto;
  position: relative;
}

#portal-logo img {
  position: static;
  width: 100%;
  content: url(images/logo.png);
}

/* * * Controles do topo * * * * * * * * * * * * * * * * * * * * * * * * * */

#theme-header {
  height: auto;
}

#header-content {
  z-index: 1;
  height: 128px;
  position: relative;
}

#header-content #portal-logo {
  align-items: center;
  width: 15%;
  left: 10%;
  top: 34px;
  position: absolute;
}

#header-content #top-search-wrapper {
  position: absolute;
  min-width: 229px;
  left: 54%;
  top: 50px;
}

#header-content #top-search-wrapper #top-search {
  display: inline-block;
}

#header-content #top-search-wrapper #top-search input {
  width: 187px;
  padding: 7px 33px 7px 7px;
  background: url(images/search.png) no-repeat scroll 200px 6px;
  border: 1px solid #A09890;
  border-radius: 3px;
  text-align: center;
  text-transform: lowercase;
  color: #A09890;
}

#header-content #top-search-wrapper #top-search div {
  display: none;
  color: #000;
  font-size: 11px;
  display: none;
  padding-top: 5px;
  left: 0px;
}

#header-content #top-search-wrapper #top-search:hover div {
  display: block;
}

#header-content #profile-header-fga {
  position: absolute;
  max-height: 217px;
  top: 45px;
  left: 77%;
  width: 125px;
}

#wrap-2 #user {
  display: none;
}

#wrap-2 #site-title {
  display: none !important;
}

/* o bloco navigation será degenerado para um simples separador */

#navigation-end {
  display: none;
}

#wrap-2 {
  position: static;
  padding: 0px;
  border: none;
/*  margin: 20px auto 0px auto;
  box-shadow: 0 0 10px rgba(0,0,0,0.3);
  border: none; */
}

#content {
  margin: 0 10% 5% 10%;
  width: 80%;
  z-index: 0;
}

#main-content-wrapper-1, #main-content-wrapper-2,
#main-content-wrapper-3, #main-content-wrapper-4,
#main-content-wrapper-5, #main-content-wrapper-6,
#main-content-wrapper-7, #main-content-wrapper-8,
.blog-post {
  background: none;
}

/* * * INI Blocos * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

#content .block-title {
  border: none;
  color: #2e3436;
  font-size: 14px;
  font-variant: normal;
  font-weight: bold;
  text-align: left;
  padding: 0px 0px 10px 0px;
  border-bottom: 1px solid #888;
}

#content .box-2 .block-title span,
#content .box-3 .block-title span {
  line-height: 26px;
  display: block;
}

.login-box {
  background: #EEE;
  padding: 10px 5px;
  -moz-border-radius: 15px;
  border-radius: 15px;
}

#content .login-block h2 {
  background: url(images/icons/persons.png) no-repeat 0% 50%;
  border: none;
  color: #000;
  font-variant: normal;
  font-weight: normal;
  padding-left: 15px;
  margin-top: 10px;
}

.login-block {
  border-top: 1px solid #888;
}

.login-block .login-box form {
  padding: 0px;
}

.login-block .forgot-passwd a {
  font-size: 11px;
  color: #651;
}

.login-box .formfieldline input {
  background: #FFF;
  color: #651;
  border: none;
  -moz-border-radius: 8px;
  border-radius: 8px;
  padding: 7px 0px;
  font-size: 15px;
}

.icon-menu-logout{
  background-image: url('images/icons/exit.png');
}
.icon-menu-logout span{
  padding-left: 7px;
}

#content .login-block .button {
  line-height: auto;
  max-height: none;
  color: #651;
}
#content .login-block .button:hover {
  color: #000;
  border: none;
}

#content .login-block .button.with-text span {
  padding: 20px;
}

#content .login-block input.button.icon-login {
  background: #000;
  background-image: -webkit-linear-gradient(top, #EFEAE0, #CFCAC0);
  background-image:    -moz-linear-gradient(top, #F4F0E0, #DFDAD0, #C8C8C8);
  background-image:     -ms-linear-gradient(top, #EFEAE0, #CFCAC0);
  background-image:      -o-linear-gradient(top, #EFEAE0, #CFCAC0);
  background-image:         linear-gradient(top, #EFEAE0, #CFCAC0);
  -moz-border-radius: 8px;
  border-radius: 8px;
}

#content .login-block input.button.icon-login:hover {
  -webkit-box-shadow: 0 0 6px #FFF;
  -moz-box-shadow: 0 0 6px #FFF;
  box-shadow: 0 0 6px #FFF;
}

#content .login-block a.button.icon-add {
  margin-left: 5px;
  background: transparent;
}
#content .login-block a.button.icon-add:hover {
  text-decoration: underline;
}

#content .link-list-block li {
  background: #FFF;
  border: 1px solid #FFF;
  position: relative;
}

#content .link-list-block li .link-this-page-background {
  position: absolute;
  display: none;
  background-repeat: no-repeat;
  background-position: center center;
  height: 30px;
  top: -1px;
  width: 19px;
}
#content .link-list-block li a.link-this-page .link-this-page-background {
  display: block;
  border-color: #fff;
}
.template-leftbar #content .box-2 .link-list-block li .link-this-page-background { /* left */
  /*background-image: url(images/selected-menu-left.png);*/
  right: -17px;
}
.template-default #content .box-2 .link-list-block li a:hover .link-this-page-background,
.template-leftbar #content .box-2 .link-list-block li a:hover .link-this-page-background { /* left */
  /*background-image: url(images/selected-menu-left-hover.png);*/
  right: -17px;
}
.template-rightbar #content .box-2 .link-list-block li .link-this-page-background,
.template-default #content .box-3 .link-list-block li .link-this-page-background { /* right */
  /*background-image: url(images/selected-menu-right.png);*/
  left: -17px;
}
.template-rightbar #content .box-2 .link-list-block li a:hover .link-this-page-background,
.template-default #content .box-3 .link-list-block li a:hover .link-this-page-background { /* right */
  /*background-image: url(images/selected-menu-right-hover.png);*/
  left: -17px;
}
/* ... */

